[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hotpot-zzy"
version = "0.3.0.8"
readme = "RAEDME.md"
authors = [
    { name = "Zhiyuan Zhang", email = "ZhiyuanZhang_scu@163.com" },
    { name = "Yue Dong", email = "1320801310@qq.com" },
    { name = "Yuqing Qiu", email = "2022223070045@stu.scu.edu.cn" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
]
dependencies = [
    "numpy",
    "pandas",
    "thermo",
    "cclib",
    "tqdm",
    'rdkit',
    'psutil'
]

[tool.setuptools]
include-package-data = true