[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hotpot-zzy"
version = "0.3.1.1"
readme = "README.md"
authors = [
    { name = "Zhiyuan Zhang", email = "ZhiyuanZhang_scu@163.com" },
    { name = "Yue Dong", email = "1320801310@qq.com" },
    { name = "Yuqing Qiu", email = "2022223070045@stu.scu.edu.cn" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
]
dependencies = [
    "numpy",
    "pandas",
    "thermo",
    "cclib",
    "tqdm",
    'rdkit',
    'psutil'
]

description = "A python package designed to communicate among various chemical and materials calculational tools"

[tool.setuptools]
include-package-data = true

[project.urls]
"Homepage" = "https://github.com/Zhang-Zhiyuan-zzy/hotpot"
